assets/css/pages/home.css
main {
  display: flex;
  flex-direction: column;
}

section {
  margin-bottom: var(--spacing-xxl);
}

section:first-of-type {
  margin-top: calc(-1 * var(--spacing-xxl));
}

section:last-of-type {
  margin-bottom: 0;
}

section h2 {
  margin-top: 0;
}

.banner {
  height: 35vh;
  position: relative;
  overflow: hidden;
}

@media screen and (min-width: 600px) {
  .banner {
    height: 30vh;
  }
}

.banner picture {
  width: 100%;
  height: 100%;
}

.banner img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
}

.banner-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-md);
  text-align: center;
  padding: var(--spacing-lg) var(--spacing-mmd) var(--spacing-xxl);
  background-color: rgba(255, 255, 255, 0.25);
  border-radius: var(--border-radius);
  line-height: 1.1;
  text-shadow: 2px 3px 3px var(--color-white);
}

@media (prefers-color-scheme: dark) {
  .banner-text {
    background-color: rgba(0, 0, 0, 0.25);
    color: var(--color-white);
    text-shadow: 2px 3px 3px var(--color-gray-90);
  }
}

@media screen and (min-width: 600px) {
  .banner-text {
    gap: 0;
    padding: var(--spacing-xs);
  }
}

.banner-text h1 {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-weight: bold;
  margin-bottom: 0;
}

.banner-text p {
  font-size: var(--text-size-h5);
  font-weight: bold;
  max-width: 22ch;
}

@media screen and (min-width: 600px) {
  .banner-text p {
    max-width: initial;
  }
}

.cards-container {
  --card-margin: var(--spacing-mmd);
  display: flex;
  flex-direction: column;
  gap: var(--spacing-mmd);
  margin-bottom: 0;
}

@media screen and (min-width: 900px) {
  .cards-container {
    --card-margin: var(--spacing-md);
    flex-direction: row;
    gap: var(--spacing-xl);
  }
}

.card {
  flex-grow: 1;
  flex-basis: content;
}

.card .text {
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: var(--spacing-mmd) 0;
}

.card .text > *:first-child {
  margin: 0;
}

.card .text > * + * {
  margin-top: var(--card-margin);
}

.card .text > *:last-child {
  margin-top: auto;
  min-width: 12rem;
}

.card .text > *:nth-last-child(2) {
  margin-bottom: var(--card-margin);
}

.card h3 {
  font-size: var(--text-size-h4);
}

